bk_ida/gccida/c1/bitmap_element_link
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_link/src/bitmap.c:687:12: error: expected expression
*( _OWORD *)&element->next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_link/src/bitmap.c:687:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&element->next = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_link/src/obj/bitmap.o] Error 1
